# OMNIX-Workbench

./: .gitignore  AGENTS.md  BORROWINGS.md  CHANGELOG.md  LICENSE  OMNIX_MEMORY.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
.omx/development/: current.md  decisions.md  error-ledger.md  errors.md  handoff.md  quality-gates.md  reflections.md  skill-candidates.md  worklog.md
.omx/icon-candidates/: render.mjs
docs/: OMNIX-Workbench-0.1.0-发布清单.md  OMNIX-Workbench-使用说明书.md  OMNIX-Workbench-完整检测方案.md  RELEASING.md
logs/decisions/: CHANGE-001.json  DEC-001.json  DEC-002.json  DEC-003.json  DEC-004.json  DEC-005.json  DEC-006.json  DEC-007.json  DEC-008.json  DEC-009.json  DEC-010.json  DEC-011.json  DEC-012.json  (+6 more)
scripts/: diagnose-msi.ps1  repair-msi-environment.ps1
src/: App.css  App.tsx  CompareHub.tsx  KnowledgeHub.tsx  MemoryHub.tsx  PlanTree.tsx  QuickAssistant.tsx  SkillHub.tsx  SkillTopology.tsx  StatusDock.tsx  WelcomeTour.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent.rs  agent_templates.rs  backup.rs  circuit_breaker.rs  code_graph.rs  commands.rs  crypto.rs  db.rs  db_schema.rs  event_bus.rs  hash.rs  input_validation.rs  knowledge.rs  lib.rs  local_models.rs  main.rs  media.rs  memory_recall.rs  model_knowledge.rs  model_provider.rs  oauth.rs  office.rs  pptx.rs  proc.rs  prompt_guard.rs  proxy.rs  proxy_middleware.rs  proxy_types.rs  remote_dashboard.html  responses_bridge.rs  runtime.rs  runtime_acp.rs  runtime_manager.rs  selection.rs  skill_dag.rs  skill_frontmatter.rs  skill_library.rs  slides.rs  storage.rs  sync_engine.rs  (+3 more)
src-tauri/src/commands/: accounts.rs  agent_installs.rs  agents.rs  aionui.rs  automation.rs  autopilots.rs  cc_switch.rs  checkpoints.rs  cli_takeover.rs  config_presets.rs  conversation_goals.rs  conversations.rs  cron.rs  custom_assistants.rs  deepseek.rs  distillation.rs  evolution.rs  grok_auth.rs  hooks.rs  kb_transfer.rs  knowledge.rs  lifecycle.rs  local_models.rs  mcp_sync.rs  media.rs  memories.rs  mod.rs  notes.rs  oauth.rs  odysseus.rs  office.rs  platforms.rs  profile.rs  project_protocol.rs  qa.rs  quick_actions.rs  quota.rs  remote_dev.rs  runs.rs  runtime.rs  (+23 more)
src-tauri/src/fixtures/: codex_responses_request.json
(+191 files in other folders)
