[package]
name = "omnix-workbench"
version = "0.13.4"
description = "Multi-Agent development and collaboration workbench"
authors = ["OMNIX Workbench Contributors"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "omnix_workbench_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# `protocol-asset` serves ~/.omnix/media files to <img>/<video> via asset://
# (scoped in tauri.conf.json security.assetProtocol).
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
reqwest = { version = "0.12", features = ["json", "stream"] }
rusqlite = { version = "0.33", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.26"
tower-http = { version = "0.5", features = ["cors"] }
dirs = "5"
which = "6"
zip = "2"
toml_edit = "0.22"
futures = "0.3"
chrono = "0.4"
portable-pty = "0.8"
strip-ansi-escapes = "0.2"
windows = { version = "0.58", features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Accessibility",
    "Win32_System_Com",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_ToolHelp",
] }
aes-gcm = "0.10"
getrandom = "0.2"
base64 = "0.22"
sha2 = "0.10"
sysinfo = "0.32"
regex = "1"
whoami = "1"
log = "0.4"
env_logger = "0.11"
# Typed ACP (Agent Client Protocol) message schema. We drive the transport over
# our own stdin/stdout JSON-RPC loop (same as the Codex adapter) rather than the
# full SDK's connection driver, which owns its own event loop and doesn't fit our
# spawn-and-dispatch runtime model.
agent-client-protocol-schema = "1"

